Align Help Panels title to their anchor (#14)
* Add alt text to NoMatch image

* Align help panel title to section title in Source section

* Align help panel titles to their anchors in HeadNode section

* Align help panel titles to their anchors in Storage section

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -54,6 +54,7 @@
     }
   },
   "noMatch": {
+    "imageAlt": "Page not found",
     "title": "Page not found",
     "description": "You might have typed the address incorrectly or you might have used an outdated link. Check the link and try again.",
     "links": "Use the following links:",
@@ -285,7 +286,7 @@
         "description": "Choose the source for creating your cluster configuration and cluster. After you choose a source, you step through the $t(global.projectName) configuration options for review and edits, to create your cluster."
       },
       "helpPanel": {
-        "title": "Set up",
+        "title": "$t(wizard.source.title)",
         "description": "Name your cluster and choose a method for configuring your cluster.",
         "link": {
           "title": "Configuration properties",
@@ -568,7 +569,7 @@
         "addStorage": "Add storage"
       },
       "helpPanel": {
-        "title": "Shared storage properties",
+        "title": "$t(wizard.storage.title)",
         "description": "<p>Add and configure shared storage for your cluster. Shared storage is shared between the head node and compute nodes.</p><p>Choose <strong>Add storage</strong> to configure shared storage for your cluster.</p><p>When you <strong>Edit</strong> shared storage configuration settings, AWS ParallelCluster doesn't check your inputs as you enter them. If your inputs can cause errors, AWS ParallelCluster returns validation error messages when you create the cluster or submit a dry run.</p><p>To see what settings can't be edited, search on the text \"Update policy: If this setting is changed, the update is not allowed\" in the <strong>Shared Storage section</strong> of the AWS ParallelCluster configuration documentation.</p><p>You can configure external or AWS ParallelCluster managed shared storage.</p>",
         "section": {
           "external": {
