Fix clusters list action buttons

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -228,7 +228,7 @@
       },
       "actions": {
         "cancel": "Cancel",
-        "create": "Create",
+        "create": "Create cluster",
         "edit": "Edit",
         "start": "Start fleet",
         "stop": "Stop fleet",
