renamed wizard steps and help panel titles to remove the " properties" suffix

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -328,7 +328,7 @@
       }
     },
     "cluster": {
-      "title": "Cluster properties",
+      "title": "Cluster",
       "description": "Configure the settings that apply to all cluster resources.",
       "help": {
         "main": "<p>Configure your cluster environment by selecting the AWS Region, operating system, and VPC.</p><p>Choose <strong>Multiple users on a cluster</strong> to use your Active Directory for managing multiple cluster users.</p><p>Choose <strong>Custom Amazon Machine Image (AMI)</strong> to use your custom AWS ParallelCluster image.</p><p>Choose <strong>Refresh</strong> to view recently changed or added AWS resources.</p>",
@@ -576,7 +576,7 @@
       }
     },
     "storage": {
-      "title": "Storage properties",
+      "title": "Storage",
       "description": "Configure shared storage for your cluster.",
       "container": {
         "title": "Configure up to 20 shared storage resources.",
