Remove username column from Users table

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -933,10 +933,8 @@
     },
     "list": {
       "columns": {
-        "username": "Username",
         "email": "Email",
-        "created": "Created",
-        "action": "Action"
+        "created": "Created"
       },
       "dialogs": {
         "delete": {
