Add Images page

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -982,6 +982,12 @@
       }
     }
   },
+  "images": {
+    "tabs": {
+      "officialImages": "Official",
+      "customImages": "Custom"
+    }
+  },
   "customImages": {
     "header": {
       "title": "Custom images",
