Add Images page to navigation

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -5,6 +5,7 @@
     "menu": {
       "header": "$t(global.projectDisplayName)",
       "clusters": "Clusters",
+      "images": "Images",
       "users": "Users",
       "viewLicense": "View License"
     },
