Add Images page, merging both Custom and Official images sections (#48)
* Remove custom and official images from navigation

* Remove page-level wrappers from Custom and Official images

* Add ImagesSplitPanel component

* Add Images page

* Add Images page to navigation

* Add e2e to Images page

* Move Custom and Official images into Images folder

* Rebase after #47

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -5,8 +5,7 @@
     "menu": {
       "header": "$t(global.projectDisplayName)",
       "clusters": "Clusters",
-      "customImages": "Custom Images",
-      "officialImages": "Official Images",
+      "images": "Images",
       "users": "Users",
       "viewLicense": "View License"
     },
@@ -982,6 +981,12 @@
           "action": "Clear filter"
         }
       }
+    }
+  },
+  "images": {
+    "tabs": {
+      "officialImages": "Official",
+      "customImages": "Custom"
     }
   },
   "customImages": {
