Let the user specify a custom name for the shared storage (#52)
* Let the user specify a custom name for the shared storage

* Check for name not being empty

* Fix typos in test cases

* Add useCallback on storage name change

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -738,6 +738,13 @@
           "label": "Mount path",
           "help": "Configure the mount path for the shared storage on both the head node and compute nodes."
         },
+        "sourceName": {
+          "label": "Shared source name",
+          "maxLengthError": "Name can be at most {{maxChars}} characters",
+          "forbiddenCharsError": "The name contains one or more forbidden characters",
+          "forbiddenKeywordError": "The name contains a forbidden keyword",
+          "emptyError": "The name is required"
+        },
         "useExisting": {
           "label": "External file system",
           "help": "Specify an external file system and mount it to all instances in the cluster.",
