Adjust FSX settings layout

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -648,7 +648,7 @@
           "fsxOnTap": "FSx NetApp ONTAP volume"
         },
         "capacity": {
-          "label": "Storage capacity: {{storageCapacity}} GB"
+          "label": "Storage capacity (GB)"
         },
         "lustreType": {
           "label": "FSx for Lustre",
