--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -725,14 +725,6 @@
             "title": "SnapshotID",
             "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-EbsSettings-SnapshotId"
           }
-        },
-        "deletionPolicy": {
-          "label": "Deletion policy",
-          "help": "Configure whether the volume should be retained, deleted, or snapshotted when a cluster is deleted.",
-          "policyLink": {
-            "title": "DeletionPolicy",
-            "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-EbsSettings-DeletionPolicy"
-          }
         }
       },
       "instance": {
@@ -764,6 +756,22 @@
           "ebsLink": {
             "title": "EBS Volume ID",
             "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-EbsSettings-VolumeId"
+          }
+        },
+        "deletionPolicy": {
+          "label": "Deletion policy",
+          "help": "Configure whether the volume should be retained, deleted, or snapshotted when a cluster is deleted.",
+          "fsxLink": {
+            "title": "FSx DeletionPolicy",
+            "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-FsxLustreSettings-DeletionPolicy"
+          },
+          "efsLink": {
+            "title": "EFS DeletionPolicy",
+            "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-EfsSettings-DeletionPolicy"
+          },
+          "ebsLink": {
+            "title": "EBS DeletionPolicy",
+            "href": "https://docs.aws.amazon.com/parallelcluster/latest/ug/SharedStorage-v3.html#yaml-SharedStorage-EbsSettings-DeletionPolicy"
           }
         }
       }
