added single entry for actions button dropdown label

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -240,6 +240,7 @@
         "filesystem": "File system",
         "dcv": "DCV"
       },
+      "actionsLabel": "Actions",
       "filtering": {
         "empty": {
           "title": "No clusters",
