Add template option to Create cluster dropdown

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -230,6 +230,7 @@
         "cancel": "Cancel",
         "create": "Create cluster",
         "createFromWizard": "Use interface",
+        "createFromTemplate": "Upload a template",
         "edit": "Edit",
         "start": "Start fleet",
         "stop": "Stop fleet",
