Add from cluster option to Create cluster dropdown

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -231,6 +231,7 @@
         "create": "Create cluster",
         "createFromWizard": "Use interface",
         "createFromTemplate": "Upload a template",
+        "createFromCluster": "From another cluster",
         "edit": "Edit",
         "start": "Start fleet",
         "stop": "Stop fleet",
