--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -320,18 +320,10 @@
       "title": "Source",
       "description": "Choose a cluster name and configuration source.",
       "validation": {
-        "cannotBeBlank": "Cluster name must not be blank.",
-        "alreadyExists": "Cluster with name {{clusterName}} already exists. Choose a unique name.",
-        "doesntMatchRegex": "Cluster name '{{clusterName}}' doesn't match the the required format. Enter a name that starts with an alphabetical character and has up to 60 characters. If Slurm accounting is configured, the name can have up to 40 characters. Valid characters: A-Z, a-z, 0-9, and - (hyphen)",
         "specifySourceCopy": "You must select a cluster to copy from."
       },
       "clusterSelect": {
         "placeholder": "Select a cluster."
-      },
-      "clusterName": {
-        "label": "Cluster name",
-        "description": "The name must start with an alphabetical character and can have up to 60 characters. If Slurm accounting is configured, the name can have up to 40 characters. Valid characters: A-Z, a-z, 0-9, and - (hyphen).",
-        "placeholder": "Enter your cluster name"
       },
       "configurationSource": {
         "label": "Source",
@@ -385,6 +377,14 @@
       "validation": {
         "VpcSelect": "You must select a VPC.",
         "customAmiSelect": "You must select an AMI ID if you add a custom AMI."
+      },
+      "clusterName": {
+        "label": "Name",
+        "description": "The name must start with an alphabetical character. Valid characters: A-Z, a-z, 0-9, and - (hyphen).",
+        "placeholder": "Enter your cluster name",
+        "cannotBeBlank": "Cluster name must not be blank.",
+        "alreadyExists": "Cluster with name {{clusterName}} already exists. Choose a unique name.",
+        "doesntMatchRegex": "Cluster name '{{clusterName}}' doesn't match the the required format. Enter a name that starts with an alphabetical character and has up to 60 characters. If Slurm accounting is configured, the name can have up to 40 characters. Valid characters: A-Z, a-z, 0-9, and - (hyphen)"
       },
       "region": {
         "label": "Region",
