Add the Create cluster button dropdown (#93)
* Add CreateButtonDropdown

* Add template option to Create cluster dropdown

* Add from cluster option to Create cluster dropdown

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -229,6 +229,9 @@
       "actions": {
         "cancel": "Cancel",
         "create": "Create cluster",
+        "createFromWizard": "Use interface",
+        "createFromTemplate": "Upload a template",
+        "createFromCluster": "From another cluster",
         "edit": "Edit",
         "start": "Start fleet",
         "stop": "Stop fleet",
