Added clusters actions in button group (#91)
* added single entry for actions button dropdown label

* removed unnecessary imports

* grouped actions under buttongroup

* improved copy

* switched to useCallback + useMemo on button dropdown items

* fixed action trigger

---------

Co-authored-by: Marco Basile <mrbarco@amazon.com>

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -229,17 +229,18 @@
       "actions": {
         "cancel": "Cancel",
         "create": "Create cluster",
+        "edit": "Edit cluster",
         "createFromWizard": "Use interface",
         "createFromTemplate": "Upload a template",
         "createFromCluster": "From another cluster",
-        "edit": "Edit",
         "start": "Start fleet",
         "stop": "Stop fleet",
-        "delete": "Delete",
+        "delete": "Delete cluster",
         "shell": "Shell",
         "filesystem": "File system",
         "dcv": "DCV"
       },
+      "actionsLabel": "Actions",
       "filtering": {
         "empty": {
           "title": "No clusters",
