Move keypair selection in a dedicated container in Headnode wizard page

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -513,6 +513,9 @@
           "alert": "If you don't have a default VPC or subnet, Amazon ParallelCluster UI will use defaults for your cluster."
         }
       },
+      "security": {
+        "header": "Security configuration and permissions"
+      },
       "securityGroups": {
        "label": "Additional security groups",
        "help": "Select one or more security groups.",
