Move security groups under advanced head node options

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -525,6 +525,7 @@
       "advancedOptions": {
         "label": "Advanced options",
         "scripts": {
+          "title": "Scripts",
           "onStart": {
             "label": "Run script on node start"
           },
