Replace 'Autosuggest' with 'Select' component in instance type selection in Head node wizard page

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -909,7 +909,11 @@
       "instanceSelect": {
         "placeholder": "Choose an instance type",
         "ariaLabel": "Instance selector",
-        "noMatches": "No matches"
+        "noMatches": "No matches",
+        "instanceType": {
+          "vCpus": "{{vCpus}} vCpus",
+          "memory": "{{memory}} GiB memory"
+        }
       },
       "customAmi": {
         "ariaLabel": "Custom Amazon Machine Image (AMI)",
