Align queues advanced options layout

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -856,6 +856,12 @@
       "advancedOptions": {
         "iamPolicies": {
           "label": "IAM Policies"
+        },
+        "scripts": {
+          "title": "Scripts"
+        },
+        "rootVolume": {
+          "title": "Root volume"
         }
       },
       "addQueueButton": {
